tests/requests/invalid/002.py
from gunicorn.ghttp.errors import InvalidRequestLine
request = InvalidRequestLine
